Add some styling mainly in index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes Assignment</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
-            <img src="https://www.theodinproject.com/assets/og-logo-022832d4cefeec1d5266237be260192f5980f9bcbf1c9ca151b358f0ce1fd2df.png" alt="Odin Recipes">
-                <h3>List of Indonesian Food Recipes</h3>
-                    <a href="./recipes/nasi_goreng.html">Nasi Goreng (Indonesian Fried Rice)</a>
-                    <a href="./recipes/indonesian_satay.html">Indonesian Satay</a>
-                    <a href="./recipes/beef_rendang.html">Chef John's Beef Rendang</a>
+            <img class="img main" src="https://www.theodinproject.com/assets/og-logo-022832d4cefeec1d5266237be260192f5980f9bcbf1c9ca151b358f0ce1fd2df.png" alt="Odin Recipes">
+                <h3 class="nav-title">List of Indonesian Food Recipes</h3>
+                    <nav>
+                        <a class="nav-links" href="./recipes/nasi_goreng.html">Nasi Goreng (Indonesian Fried Rice)</a>
+                        <a class="nav-links" href="./recipes/indonesian_satay.html">Indonesian Satay</a>
+                        <a class="nav-links" href="./recipes/beef_rendang.html">Chef John's Beef Rendang</a>
+                    </nav>
     </body>
 </html>
