--- a/recipes/beef_rendang.html
+++ b/recipes/beef_rendang.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <title>Chef John's Beef Rendang</title>
     </head>
+    <link rel="stylesheet" href="../css/style.css">
     <body>
         <h1>Chef John's Beef Rendang</h1>
-        <img src="https://www.allrecipes.com/thmb/ULvV-vgds6t0d-zXDF4gZ9WtjSQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/6303510-chef-johns-beef-rendang-Chef-John-1x1-1-f77638e425bd480188b8a794d690d6c9.jpg" alt="Chef John's Beef Rendang">
+        <img class="img thumbnail" src="https://www.allrecipes.com/thmb/ULvV-vgds6t0d-zXDF4gZ9WtjSQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/6303510-chef-johns-beef-rendang-Chef-John-1x1-1-f77638e425bd480188b8a794d690d6c9.jpg" alt="Chef John's Beef Rendang">
         <h3>Description</h3>
             <p>Beef Rendang is one of the famous food over the world. Get an award for the most delicious food in the world. Originally, rendang made with beef with various spices and cooked for a long time.</p>
         <h3>Ingredients</h3>
