--- a/recipes/indonesian_satay.html
+++ b/recipes/indonesian_satay.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Indonesian Satay</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <h1>Indonesian Satay</h1>
-            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9407054.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Indonesian Satay">
+            <img class="img thumbnail" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9407054.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Indonesian Satay">
     
             <h3>Description</h3>
                 <p>Satay is popular food in Indonesia, made with chicken or goat meat. After chopped into pieces, chicken meat pierced with skewer and grilled with brickets.</p>
