--- a/recipes/nasi_goreng.html
+++ b/recipes/nasi_goreng.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Nasi Goreng (Indonesian Fried Rice) Recipes</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <h1>Nasi Goreng (Indonesian Fried Rice)</h1>
-            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F593789.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Nasi Goreng">
+            <img class="img thumbnail" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F593789.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Nasi Goreng">
             <h3>Description</h3>
                 <p>Nasi Goreng is a famous Indonesian rice based food. Cooked white rice fried with various spices and of course some kecap manis (sweet soy sauce) and topped with fried egg or shredded chicken.</p>
             <h3>Ingredients</h3>
